--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Instagram social network graph.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo ds"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/bartolomej/instagram-graph#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.0.0",
+    "jest": "^24.8.0",
+    "neo4j-driver": "^1.7.5",
     "puppeteer": "^1.19.0"
   }
 }
